fixed minor bug when play hint display, fixed css z-index overlay

--- a/public/css/master.css
+++ b/public/css/master.css
@@ -51,11 +51,15 @@ input:-webkit-autofill, textarea:-webkit-autofill, select:-webkit-autofill {
 
 .flash {
     position: absolute;
-    z-index: 999;
+    z-index: 9;
     color: #777;
     -webkit-animation: fadeIn 1.5s forwards;
     -moz-animation: fadeIn 1.5s forwards;
     animation: fadeIn 1.5s forwards;
+}
+
+#playBtn {
+    z-index: 80;
 }
 
 /* Start: Define CSS3 slideUp animation */
